grammar.js
    source_file: $ => choice(
      $.runnable_file,
      $.unit_file,
      repeat($.statement),
      repeat($.declaration)
    ),

    runnable_file: $ => seq(
      $.file_header,
      repeat($.declaration),
      field('body', choice($.block_statement, $.asm_statement)),
      '.',
    ),

    unit_file: $ => seq(
      $.file_header,
      repeat($.declaration),
      repeat($.section),
      kw('end'),
      '.',
    ),

    file_header: $ => seq(
      field('file_type', choice(kw('unit'), kw('program'), kw('library'), kw('package'))),
      field('name', $._name),
      optional(seq(kw('deprecated'), field('message', $.compound_string_literal))),
      ';'
    ),

    section: $ => seq(
      field('kind', choice(
        kw('interface'),
        kw('implementation'),
        kw('initialization'),
        kw('finalization')
      )),
      choice(repeat($.declaration), repeat($.statement)),
    ),

    _attributes: $ => repeat1($.attribute_list),

    class_definition: $ => seq(
      kw('class'),
      optional(field('inheritance_modifier', choice(kw('abstract'), kw('sealed')))),
      optional($.base_list),

      repeat($.class_member),
      repeat($.class_section),
      kw('end'),
    ),

    parameter_list: $ => seq(
      '(',
      sep(choice($.parameter_declaration, $.record_variant_part), ';'),
      ')',
    ),

    parameter_declaration: $ => seq(
      // TODO use alias for the modifier instead
      optional($._attributes),
      optional(field('modifier', choice(kw('const'), kw('var'), kw('out')))),
      optional($._attributes),
      commaSep1($.argument_name),
      optional($._type_declaration),
      optional(seq('=', field('default_value', $.expression))),
    ),

    argument_name: $ => $._identifier,

    _method_directive: $ => seq(optional(';'), $.method_directive),
    declaration_section: $ => choice(
      $._type_declaration_section,
      $._value_declaration_section
    ),

    _type_declaration_section: $ => seq(
      field('kind', kw('type')),
      repeat($.type_declaration)
    ),

    _value_declaration_section: $ => seq(
      optional(kw('class')),
      field('kind', choice(
        kw('var'),
        kw('threadvar'),
        kw('const'),
        kw('resourcestring')
      )),
      repeat($.global_declaration),
    ),

    type_declaration: $ => seq(
      optional($._attributes),
      field('name', $._identifier),
      optional($.type_parameter_list),
      '=',
      $._type_definition,
      repeat($.hint_directive),
      optional(';')
    ),

    global_declaration: $ => seq(
      optional($._attributes),
      commaSep1($._identifier),
      optional($._type_declaration),
      optional(seq(
        '=',
        $._section_value,
      )),
      optional($.absolute_declaration),
      repeat($.hint_directive),
      optional(';')
    ),

    _section_value: $ => prec(1, choice(
      $._type_definition,
      $.expression
    )),

    _type_definition: $ => choice(
      $.type_alias_definition,
      $.strong_type_alias_definition,
      $.helper_definition,
      $.class_definition,
      alias($.fieldless_class_definition, $.class_definition),
      $.forward_class_definition,
      $.forward_interface_definition,
      $.interface_definition,
      $.record_definition,
    ),

    type_alias_definition: $ => seq(
      field('type', $.type),
    ),

    function_declaration: $ => seq(
      optional($._attributes),
      optional(kw('class')),
      field('kind', choice(
        kw('procedure'),
        kw('function'),
        kw('constructor'),
        kw('destructor'),
        kw('operator')
      )),
      field('name', $.function_name),
      optional($.type_parameter_list),
      optional($.parameter_list),
      optional(field('return_type', seq(':', $.type))),
      repeat($._method_directive),
      optional(';'),
      repeat($.hint_directive),
      optional(';')
    ),

    function_definition: $ => seq(
      field('header', $.function_declaration),
      ';',
      repeat($.declaration),
      field('body', choice($.block_statement, $.asm_statement)),
      optional(';')
    ),

    function_name: $ => seq(
      optional(field('qualifier', seq($._name, '.'))),
      field('name', $._reserved_identifier)
    ),


    assignment_statement: $ => seq(
      field('left', $.lvalue_expression),
      ':=',
      field('right', $.expression),
      optional(';')
    ),

    _type_declaration: $ => seq(":", field('type', $.type)),
    block_statement: $ => seq(
      kw('begin'),
      repeat($.statement),
      kw('end'),
      optional(';')
    ),

    binary_expression: $ => {
      /** @type {Array<[string|Rule, number]>} */
      const table = [
        ['*', PREC.MULTIPLICATIVE],
        ['/', PREC.MULTIPLICATIVE],
        [kw('div'), PREC.MULTIPLICATIVE],
        [kw('mod'), PREC.MULTIPLICATIVE],
        [kw('and'), PREC.MULTIPLICATIVE],
        [kw('shl'), PREC.MULTIPLICATIVE],
        [kw('shr'), PREC.MULTIPLICATIVE],
        [kw('as'), PREC.MULTIPLICATIVE],
        [$.not_in, PREC.MULTIPLICATIVE],
        ['+', PREC.ADDITIVE],
        ['-', PREC.ADDITIVE],
        [kw('or'), PREC.ADDITIVE],
        [kw('xor'), PREC.ADDITIVE],
        ['=', PREC.RELATIONAL],
        ['<>', PREC.RELATIONAL],
        ['<', PREC.RELATIONAL],
        ['>', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        [kw('in'), PREC.RELATIONAL],
        [kw('is'), PREC.RELATIONAL],
      ];

      return choice(...table.map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression),
        ))
      ));
    },

    dereference_expression: $ => prec(PREC.DEREFERENCE, seq(
      field('operand', choice($.parenthesized_expression, $.lvalue_expression)),
      '^'
    )),

    address_of_expression: $ => prec(PREC.UNARY, seq(
      '@',
      field('operand', $.expression),
    )),

    call_expression: $ => prec(PREC.CALL, seq(
      field('function', choice($.lvalue_expression, $.parenthesized_expression)),
      $.argument_list,
    )),

    call_statement: $ => seq(
      $._call_statement,
      optional(';')
    ),

    _call_statement: $ => prec(1, choice(
      alias($._simple_name, $.call_expression),
      $.member_access_expression,
      $.call_expression,
      alias($._inherited_call_expression, $.call_expression),
    )),

    argument_list: $ => seq(
      '(',
      commaSep($.expression),
      ')'
    ),

    array_constructor_expression: $ => seq(
      '[',
      sep($.expression, ','),
      ']',
    ),

    const_array_constructor_expression: $ => seq(
      '(',
      choice(
        sep($.expression, ','),
        sep1($.labeled_value, ';')
      ),
      ')'
    ),

    element_access_expression: $ => prec(PREC.POSTFIX, seq(
      field('expression', choice($.parenthesized_expression, $.lvalue_expression)),
      field('subscript', seq(
        '[',
        commaSep1($.expression),
        ']'
      ))
    )),

    integer_literal: _ => token(choice(
      /[0-9]+/,           // decimal
      /\$[0-9a-fA-F]+/,  // hex
      /%[01]+/,           // binary
    )),

    float_literal: $ => token(choice(
      /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/,  // 3.14, 1.5e10
      /[0-9]+[eE][+-]?[0-9]+/,             // 1e10
    )),

    string_literal: _ => token(seq(
      '\'',
      repeat(choice(
        /[^'\r\n]/,
        '\'\'',
      )),
      '\'',
    )),

    char_literal: _ => token(choice(
      /#[0-9]+/,
      /#\$[0-9a-fA-F]+/,
    )),

    compound_string_literal: $ => repeat1(choice(
      $.string_literal,
      $.char_literal,
    )),

    //#endregion
    generic_name: $ => seq($._identifier, $.type_argument_list),

    _reserved_name: $ => choice(
      $._reserved_identifier,
      alias($._reserved_generic_name, $.generic_name)
    ),

    type_argument_list: $ => seq(
      '<',
      choice(
        commaSep(choice($._name, $.array_type)),
      ),
      '>',
    ),

    type_parameter_list: $ => seq(
      '<',
      sep1($.type_parameter, ';'),
      '>',
    ),

    type_parameter: $ => seq(
      commaSep1(field('name', $._identifier)),
      optional(seq(
        ':',
        $.type_constraints,
      )),
    ),

    type_constraints: $ => commaSep1($._type_constraint),

    _type_constraint: $ => choice(
      kw('class'),
      kw('record'),
      kw('interface'),
      kw('constructor'),
      kw('unmanaged'),
      $._name,
    ),

    _name: $ => choice(
      $.qualified_name,
      $._simple_name,
    ),

    member_access_expression: $ => prec(PREC.DOT, seq(
      field('expression', choice($.parenthesized_expression, $.lvalue_expression, $.literal)),
      '.',
      field('name', $._reserved_name)),
    ),

    doc_comment: _ => token(prec(1, seq('///', /.*/))),
    line_comment: _ => token(seq('//', /.*/)),
    brace_comment: _ => token(seq('{', /[^}]*/, '}')),
    block_comment: _ => token(seq('(*', /[^*]*\*+([^*)][^*]*\*+)*/, ')')),

    identifier: $ =>  /[&\p{L}_][&\p{L}\p{Nd}_]*/u,
    _identifier: $ => choice(
      $.identifier,
      kw('string')
    ),

    _reserved_identifier: $ => reserved(
      'properties',
      $.identifier
    ),

    boolean_literal: _ => token(prec(1, /true|false/i)),
