test/corpus/comment.txt
================================================================================
Line comment in program
================================================================================
program Foo; // this is a comment
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (line_comment)
    body: (block_statement)))

================================================================================
Doc comment in program
================================================================================
/// This is a doc comment
program Foo;
begin
end.
--------------------------------------------------------------------------------

(source_file
  (doc_comment)
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement)))

================================================================================
Brace comment in program
================================================================================
program Foo;
{ this is a brace comment }
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (brace_comment)
    body: (block_statement)))

================================================================================
Block comment in program
================================================================================
program Foo;
(* this is a block comment *)
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (block_comment)
    body: (block_statement)))

================================================================================
Multiple comment types in unit
================================================================================
/// Doc comment for the unit
unit Foo;
// line comment
interface
{ brace comment }
implementation
(* block comment *)
end.
--------------------------------------------------------------------------------

(source_file
  (doc_comment)
  (unit_file
    (file_header
      name: (identifier))
    (line_comment)
    (section)
    (brace_comment)
    (section)
    (block_comment)))

================================================================================
Multiline brace comment
================================================================================
program Foo;
{
  this is a
  multiline comment
}
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (brace_comment)
    body: (block_statement)))

================================================================================
Multiline block comment
================================================================================
program Foo;
(*
  this is a
  multiline comment
*)
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (block_comment)
    body: (block_statement)))
