test/corpus/definition.txt
================================================================================
Function definition
================================================================================
program Foo;

procedure TFoo.DoSomething(x: Integer; y: String);
var
  z: Boolean;
begin
  z := True
end;

function TFoo.Add(a: Integer; b: Integer): Integer;
begin
  Result := a + b
end;

begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (function_definition
      header: (function_declaration
        name: (function_name
          qualifier: (identifier)
          name: (identifier))
        (parameter_list
          (parameter_declaration
            (argument_name
              (identifier))
            type: (identifier))
          (parameter_declaration
            (argument_name
              (identifier)))))
      (declaration_section
        (global_declaration
          (identifier)
          type: (identifier)))
      body: (block_statement
        (assignment_statement
          left: (identifier)
          right: (boolean_literal))))
    (function_definition
      header: (function_declaration
        name: (function_name
          qualifier: (identifier)
          name: (identifier))
        (parameter_list
          (parameter_declaration
            (argument_name
              (identifier))
            type: (identifier))
          (parameter_declaration
            (argument_name
              (identifier))
            type: (identifier)))
        return_type: (identifier))
      body: (block_statement
        (assignment_statement
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (identifier)))))
    body: (block_statement)))

================================================================================
Generic declarations with constraints
================================================================================

program GenericTest;
type
  TClass<T: TBase, IFoo, constructor; T1: record> = class
    function f<T: TBase, IFoo, constructor; T1: record>();
  end;
  TType = TGenericType<SomeType>;

function f<T: TBase, IFoo, constructor; T1: record>();
begin
end;

begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (declaration_section
      (type_declaration
        name: (identifier)
        (type_parameter_list
          (type_parameter
            name: (identifier)
            (type_constraints
              (identifier)
              (identifier)))
          (type_parameter
            name: (identifier)
            (type_constraints)))
        (class_definition
          (function_declaration
            name: (function_name
              name: (identifier))
            (type_parameter_list
              (type_parameter
                name: (identifier)
                (type_constraints
                  (identifier)
                  (identifier)))
              (type_parameter
                name: (identifier)
                (type_constraints)))
            (parameter_list))))
      (type_declaration
        name: (identifier)
        (type_alias_definition
          type: (generic_name
            (identifier)
            (type_argument_list
              (identifier))))))
    (function_definition
      header: (function_declaration
        name: (function_name
          name: (identifier))
        (type_parameter_list
          (type_parameter
            name: (identifier)
            (type_constraints
              (identifier)
              (identifier)))
          (type_parameter
            name: (identifier)
            (type_constraints)))
        (parameter_list))
      body: (block_statement))
    body: (block_statement)))
