test/corpus/expression.txt
================================================================================
Binary expressions
================================================================================
program Foo;
begin
  x := 1 + 2;
  x := 1 - 2;
  x := 1 * 2;
  x := 1 / 2;
  x := 1 div 2;
  x := 1 mod 2;
  x := 1 and 2;
  x := 1 or 2;
  x := 1 xor 2;
  x := 1 shl 2;
  x := 1 shr 2;
  x := 1 = 2;
  x := 1 <> 2;
  x := 1 < 2;
  x := 1 > 2;
  x := 1 <= 2;
  x := 1 >= 2
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal))))))

================================================================================
Complex binary expression
================================================================================
program Foo;
begin
  x := (1 + 2) * 3 - 4 div 2
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (assignment_statement
        left: (identifier)
        right: (binary_expression
          left: (binary_expression
            left: (const_array_constructor_expression
              (binary_expression
                left: (integer_literal)
                right: (integer_literal)))
            right: (integer_literal))
          right: (binary_expression
            left: (integer_literal)
            right: (integer_literal)))))))

================================================================================
Call expression
================================================================================
program Foo;
begin
  Bar();
  Bar(x, 42, 'hello');
  inherited Bar(x);
  Foo.Bar(x)
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (call_statement
        (call_expression
          function: (identifier)
          (argument_list)))
      (call_statement
        (call_expression
          function: (identifier)
          (argument_list
            (identifier)
            (integer_literal)
            (compound_string_literal
              (string_literal)))))
      (call_statement
        (call_expression
          function: (identifier)
          (argument_list
            (identifier))))
      (call_statement
        (member_access_expression
          expression: (identifier)
          name: (identifier)))
      (parenthesis_statement
        (identifier)))))

================================================================================
Pointer expressions
================================================================================
program Foo;
begin
  p := @myVar;
  p := @myObj.Field;
  myVar := p^;
  p^ := 42;
end.

--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (assignment_statement
        left: (identifier)
        right: (address_of_expression
          operand: (identifier)))
      (assignment_statement
        left: (identifier)
        right: (address_of_expression
          operand: (member_access_expression
            expression: (identifier)
            name: (identifier))))
      (assignment_statement
        left: (identifier)
        right: (dereference_expression
          operand: (identifier)))
      (assignment_statement
        left: (dereference_expression
          operand: (identifier))
        right: (integer_literal)))))

================================================================================
Array constructor expression
================================================================================

program Test;
begin
  a := [];
  a := [1, 2, 3];
  a := ['hello', 'world'];
  a := [1 + 2, myVar, myFunc()];
  MyFunc([1, 2, 3]);
end.

--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (assignment_statement
        left: (identifier)
        right: (array_constructor_expression))
      (assignment_statement
        left: (identifier)
        right: (array_constructor_expression
          (integer_literal)
          (integer_literal)
          (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (array_constructor_expression
          (compound_string_literal
            (string_literal))
          (compound_string_literal
            (string_literal))))
      (assignment_statement
        left: (identifier)
        right: (array_constructor_expression
          (binary_expression
            left: (integer_literal)
            right: (integer_literal))
          (identifier)
          (call_expression
            function: (identifier)
            (argument_list))))
      (call_statement
        (call_expression
          (identifier)))
      (parenthesis_statement
        (array_constructor_expression
          (integer_literal)
          (integer_literal)
          (integer_literal))))))

================================================================================
Element access expression
================================================================================

program Test;
begin
  x := a[0];
  x := a[i];
  x := a[0, 1];
  x := a[b[i]];
  x := myObj.myArray[0];
  x := MyFunc()[0];
  a[0] := 42;
end.

--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (assignment_statement
        left: (identifier)
        right: (element_access_expression
          expression: (identifier)
          subscript: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (element_access_expression
          expression: (identifier)
          subscript: (identifier)))
      (assignment_statement
        left: (identifier)
        right: (element_access_expression
          expression: (identifier)
          subscript: (integer_literal)
          subscript: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (element_access_expression
          expression: (identifier)
          subscript: (element_access_expression
            expression: (identifier)
            subscript: (identifier))))
      (assignment_statement
        left: (identifier)
        right: (element_access_expression
          expression: (member_access_expression
            expression: (identifier)
            name: (identifier))
          subscript: (integer_literal)))
      (assignment_statement
        left: (identifier)
        right: (element_access_expression
          expression: (call_expression
            function: (identifier)
            (argument_list))
          subscript: (integer_literal)))
      (assignment_statement
        left: (element_access_expression
          expression: (identifier)
          subscript: (integer_literal))
        right: (integer_literal)))))
