test/corpus/literal.txt
================================================================================
All literal types
================================================================================
program Foo;
begin
  x := 42;
  x := $FF;
  x := %101;
  x := 3.14;
  x := 1.5e10;
  x := 1e10;
  x := 'hello';
  x := 'it''s';
  x := '';
  x := #65;
  x := #$41;
  x := True;
  x := False;
  x := nil;
  x := '''' 
    hello 
  ''''
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    body: (block_statement
      (assignment_statement
        left: (identifier)
        right: (integer_literal))
      (assignment_statement
        left: (identifier)
        right: (integer_literal))
      (assignment_statement
        left: (identifier)
        right: (integer_literal))
      (assignment_statement
        left: (identifier)
        right: (float_literal))
      (assignment_statement
        left: (identifier)
        right: (float_literal))
      (assignment_statement
        left: (identifier)
        right: (float_literal))
      (assignment_statement
        left: (identifier)
        right: (compound_string_literal
          (string_literal)))
      (assignment_statement
        left: (identifier)
        right: (compound_string_literal
          (string_literal)))
      (assignment_statement
        left: (identifier)
        right: (compound_string_literal
          (string_literal)))
      (assignment_statement
        left: (identifier)
        right: (compound_string_literal
          (char_literal)))
      (assignment_statement
        left: (identifier)
        right: (compound_string_literal
          (char_literal)))
      (assignment_statement
        left: (identifier)
        right: (boolean_literal))
      (assignment_statement
        left: (identifier)
        right: (boolean_literal))
      (assignment_statement
        left: (identifier)
        right: (identifier))
      (assignment_statement
        left: (identifier)
        right: (multiline_string)))))
